<resources>
    <string name="app_name">ParkIt-Exit-Scanner</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>



    <string name="label_scan_qr_code_btn">Scan QR Code</string>
    <string name="title_activity_configuration_login">Configuration Login</string>
    <string name="label_parking_lot_id">Parking Lot ID</string>
    <string name="hint_parking_lot_id">Parking Lot ID …</string>

    <string name="label_configuration_pass_key">Configuration Pass Key</string>
    <string name="hint_configuration_pass_key">Configuration Pass Key …</string>
    <string name="label_verify_pass_key">Verify Key</string>
    <string name="label_configure_scanner_btn">Configure Scanner</string>
    <string name="title_activity_scanner_configuration">Scanner Configuration</string>
    <string name="label_save_configuration">Save Configuration</string>
    <string name="label_vehicle_type">Vehicle Type</string>
    <string name="label_clear_config">Clear Scanner Configuration</string>

    <array name="vehicle_type_models">
        <item>two_wheeler</item>
        <item>four_wheeler</item>
        <item>heavy_vehicle</item>
    </array>

    <array name="vehicle_type_views">
        <item>Two wheeler</item>
        <item>Four wheeler</item>
        <item>Heavy vehicle</item>
    </array>

    <string name="label_api_host_address">API Host Address</string>
    <string name="hint_api_host_address">host address ex: 192.168.1.1 …</string>
    <string name="label_refresh_api">Refresh API Host Configuration</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>



</resources>
