<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.parkit.parkit_exit_scanner.ui.activity.ScannerConfigurationActivity">




    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_parking_lot_id"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/edit_parking_lot_id"
        android:hint="@string/hint_parking_lot_id"
        android:inputType="number"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_vehicle_type"
        />
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/spinner_vehicle_type"
        >
    </Spinner>



    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/btn_save_config"
        android:text="@string/label_save_configuration"/>

</LinearLayout>
